# AstrobuyerV2

./: .gitignore  Cargo.toml  README.md
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  index.tsx
client/src/components/: Astro.tsx  CartUI.tsx  Home.tsx  Login.tsx  Navbar.tsx  ShopFilters.tsx  Signup.tsx  Store.tsx
client/src/styles/: Astro.module.css  CartUI.module.css  Home.module.css  Login.module.css  Navbar.module.css  Signup.module.css  Store.module.css  index.css
client/src/utils/: sharedSignals.ts  types.ts  useQuery.ts  useTooltip.ts  utils.ts
migrations/: 0001_astros.sql  0002_astros.sql  0003_users.sql  0004_cart.sql  0005_cartpk.sql
mobile/: pubspec.yaml
mobile/lib/: AstroMainUI.dart  AstroModel.dart  Cart.dart  home.dart  item.dart  login.dart  main.dart  profile.dart  signup.dart
mobile/lib/home/: homeBody.dart  homeDrawer.dart  home_body.dart  home_drawer.dart  home_drawer_lgoff.dart  home_drawer_lgon.dart
mobile/lib/models/: astro_model.dart  cart_model.dart  login_model.dart
mobile/lib/providers/: user_provider.dart
src/: main.rs
src/api/: cors.rs  db.rs  mod.rs  router.rs
src/api/planets/: astros.rs  mod.rs
src/api/routes/: astros.rs  cart.rs  mod.rs  users.rs
