[package]
name = "astrobuyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
dotenvy = "0.15.7"
serde = "1.0.172"
serde_json = "1.0.103"
sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
sqlx-postgres = "0.7.1"
tokio = {version="1", features= ["full"]}
tracing-subscriber = "0.3.17"
